test/corpus/literals/boolean.test
====
true
====
if: true
---

(pair
  key: (if_key)
  value: (expression
    (boolean)))

================
true (delimited)
================
if: ${{ true }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (expression
      (boolean))))

=====
false
=====
if: false
---

(pair
  key: (if_key)
  value: (expression
    (boolean)))

=================
false (delimited)
=================
if: ${{ false }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (expression
      (boolean))))
