test/corpus/literals/null.test
====
null
====
if: null
---

(pair
  key: (if_key)
  value: (expression
    (null)))

================
null (delimited)
================
if: ${{ null }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (expression
      (null))))
