test/corpus/literals/number.test
=======
integer
=======
if: 711
---

(pair
  key: (if_key)
  value: (expression
    (literal
      (number))))

===================
integer (delimited)
===================
if: ${{ 711 }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (literal
      (number))))

=====
float
=====
if: -9.2
---

(pair
  key: (if_key)
  value: (expression
    (literal
      (number))))

=================
float (delimited)
=================
if: ${{ -9.2 }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (literal
      (number))))

===
hex
===
if: 0xff
---

(pair
  key: (if_key)
  value: (expression
    (literal
      (number))))

===============
hex (delimited)
===============
if: ${{ 0xff }}
---

(pair
  key: (if_key)
  value: (delimited_expression
    (literal
      (number))))

===========
exponential
===========
if: -2.99e-2
---

(pair
  key: (if_key)
  value: (expression
    (literal
      (number))))

=======================
exponential (delimited)
=======================
if: ${{ -2.99e-2 }}
---

(pair
  key: (if_key)
  value: (delimited_expression
    (literal
      (number))))
