test/corpus/not-if-key.test
======
simple
======
GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
---
(source
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))

=====================================
multiple expressions and ignored text
=====================================
name: Build wheels on ${{matrix.os}} (${{matrix.arch}})
---
(source
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))))
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))

=============
kebab-case key
=============
java-version: ${{ env.JAVA_JDK_VERSION }}
---
(source
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))
