test/corpus/operators/not.test
===
Not
===
if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
---
(source
  (delimited_expression
    (not)
    (function_call
      function: (identifier)
      arguments: (arguments
        (context
          (identifier)
          (property
            (property_deref)
            (identifier)))
        (literal
          (string
            (string_content)))))))

=======================
error without delimiter
:error
=======================
if: ! startsWith(github.ref, 'refs/tags/')
---
