test/corpus/operators/rest.test
=================
context equal to string
=================
if: github.repository == 'my-org/my-repo'
---
(pair
  key: (if_key)
  value: (expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))
    (operator
      (eq))
    (literal
      (string
        (string_content)))))

=============================
context equal to number (delimited)
=============================
if: ${{ context.property == 123 }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))
    (operator
      (eq))
    (literal
      (number))))

================
multiple members
================
if: failure() && steps.demo.conclusion == 'failure' 
---
(pair
  key: (if_key)
  value: (expression
    (function_call
      function: (identifier))
    (operator
      (and))
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))
      (property
        (property_deref)
        (identifier)))
    (operator
      (eq))
    (literal
      (string
        (string_content)))))
