test/corpus/within-bash-injection.test
================
raw_string nodes
================
run: |
  mkdir '${{ runner.temp }}'/build_logs
  echo "Logs from building" > '${{ runner.temp }}'/build_logs/build.logs
  exit 1
---
(source
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier))))
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))

===============
with expansions
===============
run: |
  folder='prefix$-${{ runner.temp }}-suffix'
  ignored=$(echo "ignored")
  slice=${ignored:1:2}
  mkdir "$folder"/build_logs
  echo "Logs from building" > "$folder"/build_logs/build.logs
  exit 0
---
(source
  (delimited_expression
    (context
      (identifier)
      (property
        (property_deref)
        (identifier)))))
